--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -24,3 +24,13 @@
 .mobile-overlay {
   background-color: #ec6433cc;
 }
+
+.quote p::before{
+  display: block;
+  margin: 0 auto;
+  width: 40px;
+  height: 40px;
+  background-image: url(https://s3.amazonaws.com/sji_site/wp/util/ui-sprites.png);
+  background-position: 31% 21%;
+  content: ' ';
+}
